@@ -70,6 +70,5 @@ public final class SnipeSpecialHandler extends RangeSwingHandler implements Plug
 	public void visualize(Entity entity, Entity victim, BattleState state) {
 		entity.animate(ANIMATION);
 		Projectile.create(entity, victim, 698, 36, 25, 35, 72).send();
-        addExperience(entity, victim, state);
 	}
 }
