@@ -94,7 +94,6 @@ public final class SpearWallSpecialHandler extends MeleeSwingHandler implements 
 	@Override
 	public void visualize(Entity entity, Entity victim, BattleState state) {
 		entity.visualize(ANIMATION, GRAPHIC);
-        addExperience(entity, victim, state);
 	}
 
 	@Override
