@@ -111,14 +111,10 @@ open class MagicSwingHandler
 
     override fun visualize(entity: Entity, victim: Entity?, state: BattleState?) {
         state!!.spell.visualize(entity, victim)
-        addExperience(entity, victim, state)
     }
 
     override fun impact(entity: Entity?, victim: Entity?, state: BattleState?) {
-        if (state!!.spell != null && entity is Player) {
-            entity.getSkills().addExperience(Skills.MAGIC, state.spell.experience)
-        }
-        if (state.targets == null) {
+        if (state!!.targets == null) {
             if (state.estimatedHit > -1) {
                 victim!!.impactHandler.handleImpact(entity, state.estimatedHit, CombatStyle.MAGIC, state)
             }
@@ -224,50 +220,14 @@ open class MagicSwingHandler
     }
 
     override fun addExperience(entity: Entity?, victim: Entity?, state: BattleState?) {
-        if (entity is Player) {
-            if (victim is Player && entity.asPlayer().ironmanManager.isIronman) {
-                return
-            }
-            var hit = 0
-            if (state!!.targets != null) {
-                for (s in state.targets) {
-                    if (s != null && s.estimatedHit > 0) {
-                        hit += s.estimatedHit
-                    }
-                }
-            } else if (state.estimatedHit > 0) {
-                hit += state.estimatedHit
-            }
-            if (state.spell != null) {
-                state.spell.addExperience(entity, hit)
-            } else {
-                val famExp = entity.getAttribute("fam-exp", false) && entity.familiarManager.hasFamiliar()
-                if (!famExp) {
-                    entity.getSkills().addExperience(Skills.HITPOINTS, hit * 1.33, true)
-                } else {
-                    val fam = entity.familiarManager.familiar
-                    var skill = Skills.MAGIC
-                    when (fam.attackStyle) {
-                        WeaponInterface.STYLE_DEFENSIVE -> skill = Skills.DEFENCE
-                        WeaponInterface.STYLE_ACCURATE -> skill = Skills.ATTACK
-                        WeaponInterface.STYLE_AGGRESSIVE -> skill = Skills.STRENGTH
-                        WeaponInterface.STYLE_RANGE_ACCURATE -> skill = Skills.RANGE
-                        WeaponInterface.STYLE_CONTROLLED -> {
-                            var experience = hit * EXPERIENCE_MOD
-                            experience /= 3.0
-                            entity.getSkills().addExperience(Skills.ATTACK, experience, true)
-                            entity.getSkills().addExperience(Skills.STRENGTH, experience, true)
-                            entity.getSkills().addExperience(Skills.DEFENCE, experience, true)
-                            return
-                        }
-                    }
-                    entity.getSkills().addExperience(skill, hit * EXPERIENCE_MOD, true)
-                    return
-                }
-                entity.getSkills().addExperience(Skills.MAGIC, hit * EXPERIENCE_MOD, true)
-            }
+        if (state?.spell != null && entity is Player) {
+            state.spell.addExperience(entity, state.totalDamage)
+            return
         }
+
+        super.addExperience(entity, victim, state)
     }
+
 
     override fun getArmourSet(e: Entity?): ArmourSet? {
         return if (ArmourSet.AHRIM.isUsing(e)) {
