@@ -51,3 +51,4 @@
 - Fixed Typo in Professor Oddenstein's dialogue
 - Random Events can no longer spawn in the wilderness.
 - Fairy rings emit a sound when teleporting.
+- Summoning familiars now grant combat xp when attacking
